Fixed BG stretch

--- a/styles.css
+++ b/styles.css
@@ -14,34 +14,34 @@ html {
 
 .home-bg {
 	background: url(./auditorium.jpg) no-repeat center center fixed;
-	background-size: 120%;
+/*	background-size: 120%;
 	-webkit-background-size: 120%;
 	-o-background-size: 120%;
-	-moz-background-size: 120%;
+	-moz-background-size: 120%;*/
 }
 
 .about-bg {
 	background: url(./castlerock.jpg) no-repeat center center fixed;
-	background-size: 150%;
+/*	background-size: 150%;
 	-webkit-background-size: 150%;
 	-o-background-size: 150%;
-	-moz-background-size: 150%;
+	-moz-background-size: 150%;*/
 }
 
 .projects-bg {
 	background: url(./circuit.jpg) no-repeat center center fixed;
-	background-size: 140%;
+/*	background-size: 140%;
 	-webkit-background-size: 140%;
 	-o-background-size: 140%;
-	-moz-background-size: 140%;
+	-moz-background-size: 140%;*/
 }
 
 .contact-bg {
 	background: url(./beach.jpg) no-repeat center center fixed;
-	background-size: 150%;
-	-webkit-background-size: 150%;
-	-o-background-size: 150%;
-	-moz-background-size: 150%;
+/*	background-size: cover;
+	-webkit-background-size: cover;
+	-o-background-size: cover;
+	-moz-background-size: cover;*/
 }
 
 @media
